--- a/Discord Butler Bot UI/MainWindow.xaml
+++ b/Discord Butler Bot UI/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Discord_Butler_Bot_UI"
+        xmlns:uc="clr-namespace:Discord_Butler_Bot_UI.UserControls"
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Title="Discord Butler Bot UI" Height="600" Width="1000" 
@@ -14,11 +15,7 @@
             <Border BorderBrush="{StaticResource PrimaryColor}" BorderThickness="0, 0, 2, 0" Margin="0,0,260,0">
                 <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                     <StackPanel>
-                        <Border BorderBrush="{StaticResource SecondaryColorHover}" BorderThickness="0,0,0,2" >
-                            <StackPanel Orientation="Horizontal" Height="80" Background="{StaticResource SecondaryColor}">
-                                <Rectangle Fill="Red" Width="10"/>
-                            </StackPanel>
-                        </Border>
+                        <uc:BotLog></uc:BotLog>
                     </StackPanel>
                 </ScrollViewer>
             </Border>
