--- a/Discord Butler Bot UI/MainWindow.xaml
+++ b/Discord Butler Bot UI/MainWindow.xaml
@@ -15,7 +15,9 @@
             <Border BorderBrush="{StaticResource PrimaryColor}" BorderThickness="0, 0, 2, 0" Margin="0,0,260,0">
                 <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                     <StackPanel>
-                        <uc:BotLog></uc:BotLog>
+                        <TextBlock Name="LogPanelPlaceholder" Visibility="Visible" Foreground="LightGray" HorizontalAlignment="Stretch" Height="468" TextAlignment="Center" Padding="0, 220, 0, 0">
+                            Logs will appear here when the bot is running.
+                        </TextBlock>
                     </StackPanel>
                 </ScrollViewer>
             </Border>
@@ -35,6 +37,6 @@
             <TextBlock HorizontalAlignment="Left" Margin="241,366,0,48" TextWrapping="Wrap" Text="Loading" VerticalAlignment="Bottom" Foreground="LightGray" FontSize="12"/>
         </Grid>
         <TextBlock HorizontalAlignment="Left" Margin="190,388,0,25" TextWrapping="Wrap" Text="Running:" VerticalAlignment="Bottom" Foreground="White" FontSize="14" FontWeight="Bold"/>
-        <TextBlock Name="RunningTimeText" HorizontalAlignment="Left" Margin="254,390,0,25" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Bottom" Foreground="{StaticResource PrimaryColor}" FontSize="12"/>
+        <uc:BotRunningTimer x:Name="RunningTimer" VerticalAlignment="Bottom" Margin="254,390,0,25" FontSize="12"/>
     </Grid>
 </Window>
