--- a/Discord Butler Bot UI/App.xaml
+++ b/Discord Butler Bot UI/App.xaml
@@ -5,12 +5,25 @@
              StartupUri="MainWindow.xaml"
              Exit="Application_Exit">
     <Application.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+
         <SolidColorBrush x:Key="BgColor" Color="#121212"></SolidColorBrush>
         <SolidColorBrush x:Key="PrimaryColor" Color="#BB86FC"></SolidColorBrush>
         <SolidColorBrush x:Key="PrimaryColorHover" Color="#A660FB"></SolidColorBrush>
         <SolidColorBrush x:Key="SecondaryColor" Color="#FF0D002B"></SolidColorBrush>
         <SolidColorBrush x:Key="SecondaryColorHover" Color="#FF1A0058"></SolidColorBrush>
         <FontFamily x:Key="PrimaryFontFamily">Roboto</FontFamily>
+
+        <Style x:Key="BotLogContainer" TargetType="{x:Type StackPanel}">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="False">
+                    <Setter Property="Background" Value="{StaticResource SecondaryColor}"/>
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="{StaticResource SecondaryColorHover}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
         
         <Style x:Key="MainButton" TargetType="{x:Type Button}">
             <Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
